[package]
name = "traffic"
version = "0.1.0"
authors = ["Josh Mcguigan <>"]
repository = "https://github.com/JoshMcguigan/traffic"
readme = "README.md"
keywords = ["github", "cli"]

[dependencies]
reqwest = "0.8.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
keyring = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
termion = "1.5.1"
preferences = "1.1.0"
structopt = "0.2.8"
rpassword = "2.0.0"

